--- a/_posts/2015-04-22-Cryptix.markdown
+++ b/_posts/2015-04-22-Cryptix.markdown
@@ -12,14 +12,14 @@ Error message:
 
 Two solutions are possible in case of this Java issue:
 
-1) Run the wget script with the -H option.
+**Solution 1:** Run the wget script with the -H option.
 
      bash wget-################.sh -H
 
-This easy solution should work, if
+Then authentication will be tried without certificates. This easy solution should work, if
 * You use Oracle Java 1.7+ or OpenJDK 1.7+
 * The ESGF portal you use for script generation runs version 1.8 of ESGF software (The version is shown in the brown rectangle at the bottom of the Home page)
 * The data you need are not from ESGF NCAR data node tds.ucar.edu (error message: "http request to OpenID Relying Party service failed.")
 
-2) Install Oracle Java 1.7 or newer and add it to your environment (define JAVA_HOME etc.)
+**Solution 2:** Install Oracle Java 1.7 or newer and add it to your environment (define JAVA_HOME etc.)
 
