--- a/_posts/2015-04-22-Cryptix.markdown
+++ b/_posts/2015-04-22-Cryptix.markdown
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "algorithm/RSA/ECB/PKCS1Padding is not available from provider Cryptix"
-categories: download, wget
+categories: wget
 date: 2015-06-09 15:45:00
 author: Torsten Rathmann
 ---
